--- a/build-scripts/dnsdist.spec.j2
+++ b/build-scripts/dnsdist.spec.j2
@@ -1,3 +1,7 @@
+%if %{?rhel} < 6
+exit 1
+%endif
+
 Name: dnsdist
 Version: {{pkg_version}}
 Release: {{pkg_release}}
@@ -7,10 +11,20 @@ Vendor: PowerDNS.COM BV
 Group: System/DNS
 Source: %{name}-%{version}.tar.bz2
 Requires(pre): shadow-utils
+BuildRequires: boost-devel
+BuildRequires: lua-devel
+BuildRequires: protobuf-compiler
+BuildRequires: protobuf-devel
+BuildRequires: re2-devel
+BuildRequires: readline-devel
 
-{% for dep in builddeps %}
-BuildRequires: {{ dep }}
-{% endfor %}
+%if %{rhel} >= 7
+Requires(post): systemd-units
+Requires(preun): systemd-units
+Requires(postun): systemd-units
+BuildRequires: systemd-devel
+BuildRequires: libsodium-devel
+%endif
 
 %description
 dnsdist is a high-performance DNS loadbalancer that is scriptable in Lua.
@@ -89,3 +103,4 @@ fi
 %{_unitdir}/%{name}.service
 %else
 %{_initrddir}/%{name}
+%endif
